# a-gnucash-integration

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  a-gnucash-integration.cpp  docker-compose-postgres.yml  gnc-patch-1-book-of-inst
.circleci/: config.yml
.github/workflows/: main.yml
